feat: added new cloudinary dependencies
